# clamav-client

./: README.md  README.rst  pyproject.toml  setup.py  test.sh
.github/workflows/: test.yml
clamav_client/: __init__.py  clamd.py  scanner.py
tests/: conftest.py  test_clamd.py  test_client.py
tests/integration/: test_scanner.py
tests/unit/: test_unit_scanner.py
