[project]
name = "clamav-client"
version = "0.2.0"
description = "Python client library for the ClamAV antivirus."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "ruff>=0.6.3",
]

[tool.mypy]
strict = true

[tool.ruff.lint]
extend-select = ["A", "B", "I", "Q"]

[tool.ruff.lint.isort]
force-single-line = true
